WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182169
[iOS] prefers-reduced-motion media query is not working
https://bugs.webkit.org/show_bug.cgi?id=182169
Summary
[iOS] prefers-reduced-motion media query is not working
Antoine Quint
Reported
2018-01-26 05:05:07 PST
The demo at
https://webkit.org/blog-files/prefers-reduced-motion/prm.htm
is not working.
Attachments
Patch
(1.55 KB, patch)
2018-01-26 05:08 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2018-01-26 05:05:24 PST
<
rdar://problem/36801631
>
Antoine Quint
Comment 2
2018-01-26 05:08:13 PST
Created
attachment 332366
[details]
Patch
chris fleizach
Comment 3
2018-01-26 08:09:15 PST
Comment on
attachment 332366
[details]
Patch Is there a reason this is tied to the new theme flag? I would expect it to work unconditionally on all platforms
WebKit Commit Bot
Comment 4
2018-01-26 11:39:41 PST
Comment on
attachment 332366
[details]
Patch Clearing flags on attachment: 332366 Committed
r227686
: <
https://trac.webkit.org/changeset/227686
>
WebKit Commit Bot
Comment 5
2018-01-26 11:39:42 PST
All reviewed patches have been landed. Closing bug.
Dean Jackson
Comment 6
2018-01-26 17:56:04 PST
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 332366
[details]
> Patch > > Is there a reason this is tied to the new theme flag? I would expect it to > work unconditionally on all platforms
I don't know what I was thinking in my original patch, surrounding that with NEW_THEME. That also must have applied to iOS at the time. Here's a patch to remove it:
https://bugs.webkit.org/show_bug.cgi?id=182203
We'll see if it compiles everywhere :)
James Craig
Comment 7
2018-01-27 15:02:01 PST
<
rdar://problem/36801631
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug