[iOS] prefers-reduced-motion media query is not working https://bugs.webkit.org/show_bug.cgi?id=182169 <rdar://problem/36801631>

Patch by Antoine Quint <graouts@apple.com> on 2018-01-26
Reviewed by Dean Jackson.

The code that would eventually query UIKit for the system setting was not run since USE(NEW_THEME) is off on iOS.
Adding a PLATFORM(IOS) flag here allows the code to run.

* css/MediaQueryEvaluator.cpp:
(WebCore::prefersReducedMotionEvaluate):

Canonical link: https://commits.webkit.org/198003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227686 268f45cc-cd09-0410-ab3c-d52691b4dbfc